--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "local": "cross-env VITE_LOCAL_DEV=true dotenv -e .env -- sh -c 'concurrently \"cd frontend && npm run local\" \"firebase emulators:start --project $FIREBASE_PROJECT_ID\"'",
     "deploy": "firebase deploy",
-    "lint": "eslint . --ext .js,.jsx",
-    "filetree": "node filetree.js"
+    "lint": "eslint . --ext .js,.jsx"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
