--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -32,6 +32,16 @@
         "linkedin-withdraw.js"
       ],
       "run_at": "document_end"
+    },
+    {
+      "matches": ["*://www.linkedin.com/mynetwork/invite-connect/connections*"],
+      "js": [
+        "helpers-dom.js",
+        "helpers-localStorage.js",
+        "drawer.js",
+        "linkedin-update-connected.js"
+      ],
+      "run_at": "document_end"
     }
   ],
   "web_accessible_resources": [
