--- a/commandline/package.json
+++ b/commandline/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "csv-stringify": "^6.5.1",
     "fs": "^0.0.1-security",
     "puppeteer": "^22.12.0"
   }
