--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,13 @@ FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
 FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
 FIREBASE_APP_ID=your_app_id_here
 
+# Replace these with your Trello API key etc
+TRELLO_API_KEY=your_trello_api_key_here
+TRELLO_TOKEN=your_trello_token_here
+TRELLO_BOARD_ID=your_trello_board_id_here
+TRELLO_LIST_ID=your_trello_list_id_here
+
+
 # Leave these as-is
 VITE_FIREBASE_API_KEY=$FIREBASE_API_KEY
 VITE_FIREBASE_AUTH_DOMAIN=$FIREBASE_AUTH_DOMAIN
