--- a/commandline/package.json
+++ b/commandline/package.json
@@ -9,6 +9,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.4",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "puppeteer": "^22.12.0"
   }
