--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
+    "firebase-functions": "^6.0.1",
     "ignore": "^5.3.1"
   }
 }
